--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first web development portfolio</title>       
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
+
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button>Hire Me</button></a></li>
+            </ul>
+        </nav>
     </header>
-    
     <main>
 
     </main>
-
     <footer>
 
     </footer>
