--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
                 <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4>Hi, I  am</h4>
+                <h1>Mary Hardy</h1>
+                <p class="content-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button>Download CV</button>
+                <button>Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="a man photo" width="584" height="676">           
+        </div>
     </header>
     <main>
 
