--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="content-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary banner-button">Contact</button>
             </div>
             <img src="images/hardy.png" alt="a man photo" width="584" height="676">           
         </div>
