--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </header>
 
     <main>
+      <!-- first section -->
+
       <section class="About secondary-bg">
         <h3 class="section-title">About Me</h3>
         <p class="section-description dark-3">
@@ -71,6 +73,38 @@
             <p class="item-title">From:</p>
             <p class="item-description">Los Angeles, USA</p>
           </div>
+        </div>
+      </section>
+      <!-- second section -->
+
+      <section class="skill">
+        <h2 class="skill-title dark-1 text-center">What I do             </h2>
+        <div class="skill-description dark-3 text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+        </div>               
+
+        <div class="skills-container">
+          <!-- .skill*4>img+h3.skill-title+p.skill-description -->
+
+          <div class="skills">
+            <img src="images/icons/js.png" alt="">
+            <h3 class="skills-title">Vanilla JavaScript</h3>
+            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skills">
+            <img src="images/icons/react.png" alt="">
+            <h3 class="skills-title">React</h3>
+            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skills">
+            <img src="images/icons/nodejs.png" alt="">
+            <h3 class="skills-title">Node.js</h3>
+            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skills">
+            <img src="images/icons/mongo.png" alt="">
+            <h3 class="skills-title">MongoDB</h3>
+            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>        
         </div>
       </section>
     </main>
