--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <!-- second section -->
 
       <section class="skill">
-        <h2 class="skill-title dark-1 text-center">What I do             </h2>
+        <h2 class="skill-title dark-1 text-center">What I do</h2>
         <div class="skill-description dark-3 text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
         </div>               
 
@@ -107,7 +107,67 @@
           </div>        
         </div>
       </section>
-    </main>
+      <!-- Third section from here -->
+
+      <section class="resume">
+        <h2 class="resume-section-title dark-1">A summary of My Resume</h2>
+        <div class="resume-container">
+
+          <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-subtitle+.experience-descriptions -->
+
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-subtitle ">Harvard University / 2015 - 2017</h5>
+              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="experience">
+              <h4 class="experience-title">Sr. Font End Developer</h4>
+              <h5 class="experience-subtitle">Apple Inc / 2020 - Current</h5>
+              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+
+            <div class="experience">
+              <h4 class="experience-title">Jr. Font End Developer</h4>
+              <h5 class="experience-subtitle">Dribbble Inc / 2018 - 2022</h5>
+              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+
+            <div class="experience">
+              <h4 class="experience-title">HTML Developer</h4>
+              <h5 class="experience-subtitle">Adobe Inc / 2017 - 2018</h5>
+              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+          </div>
+
+
+      </section>
     <footer></footer>
   </body>
 </html>
