--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <div class="About-items">
           <div class="About-item">
             <p class="item-title">Name:</p>
-            <p class="item-description">Engr. Biplob Barua</p>
+            <p class="item-description">Engr. Biplob
+               Barua</p>
           </div>
           <div class="About-item">
             <p class="item-title">Email:</p>
@@ -110,7 +111,7 @@
       <!-- Third section from here -->
 
       <section class="resume">
-        <h2 class="resume-section-title dark-1">A summary of My Resume</h2>
+        <h2 class="resume-section-title text-center">A summary of My Resume</h2>
         <div class="resume-container">
 
           <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-subtitle+.experience-descriptions -->
@@ -164,10 +165,13 @@
               <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
                 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
             </div>
-          </div>
-
-
+            <div class="resume-download-cv ">
+              <button class="btn-primary ">Download CV</button>
+            </div>           
       </section>
+    </main>
+      
+
     <footer></footer>
   </body>
 </html>
