added button and styles

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
       <section class="resume">
         <h2 class="resume-section-title dark-1">A summary of My Resume</h2>
         <div class="resume-container">
-
           <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-subtitle+.experience-descriptions -->
 
           <div class="resume-column">
@@ -153,16 +152,20 @@
             </div>
             <hr>
 
-            <div class="experience">
+           <div class="experience">
               <h4 class="experience-title">HTML Developer</h4>
               <h5 class="experience-subtitle">Adobe Inc / 2017 - 2018</h5>
               <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
                 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
-            </div>
+            </div>           
           </div>
-
-
+        </div>
+        <div class="resume-download-btn">
+          <button class="btn-primary">Download CV</button>
+        </div>             
       </section>
-    <footer></footer>
+      
+    <footer>
+    </footer>
   </body>
 </html>
