added footer title and icons

--- a/index.html
+++ b/index.html
@@ -166,6 +166,16 @@
       </section>
       
     <footer>
+      <section class="footer-column">
+        <h3 class="section-title">Lets Connect</h3>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+
+        <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook logo"></a>
+        <a href="https://x.com/?lang=en"><img src="images/icons/twitter.png" alt="X twitter logo"></a>
+        <a href="https://www.instagram.com/   "><img src="images/icons/insta.png" alt="instagram logo"></a>
+      </section>
+      <section class="footer-column">
+      </section>
     </footer>
   </body>
 </html>
