--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>             
       </section>
       
-    <footer>
+    <footer class="secondary-bg">
       <section class="footer-column">
         <h3 class="section-title">Lets Connect</h3>
         <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
@@ -175,6 +175,13 @@
         <a href="https://www.instagram.com/   "><img src="images/icons/insta.png" alt="instagram logo"></a>
       </section>
       <section class="footer-column">
+        <h3 class="section-title">Let’s Message me</h3>
+        <form class="footer-form" action="">
+          <input type="text" name="" id="" placeholder="Your name">
+          <input type="email" name="" id="" placeholder="Your email">
+          <textarea name="" id="" cols="30" rows="10">Comments here</textarea>
+        </form>
+        <input class="btn-primary" type="submit" value="Submit">
       </section>
     </footer>
   </body>
