--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="styles/portfolio.css"/>
   </head>
   <body class="open-sans-normal">  
     <header class="header secondary-bg">
@@ -164,25 +164,27 @@
           <button class="btn-primary">Download CV</button>
         </div>             
       </section>
-      
-    <footer class="secondary-bg">
-      <section class="footer-column">
-        <h3 class="section-title">Lets Connect</h3>
-        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+      </main>
 
-        <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook logo"></a>
-        <a href="https://x.com/?lang=en"><img src="images/icons/twitter.png" alt="X twitter logo"></a>
-        <a href="https://www.instagram.com/   "><img src="images/icons/insta.png" alt="instagram logo"></a>
-      </section>
-      <section class="footer-column">
-        <h3 class="section-title">Let’s Message me</h3>
-        <form class="footer-form" action="">
-          <input type="text" name="" id="" placeholder="Your name">
-          <input type="email" name="" id="" placeholder="Your email">
-          <textarea name="" id="" cols="30" rows="10">Comments here</textarea>
-        </form>
-        <input class="btn-primary" type="submit" value="Submit">
-      </section>
-    </footer>
+      <footer class="secondary-bg">
+        <div class="footer-column">
+          <h2 class="footer-section-title dark-1">Lets Connect</h2>
+          <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div>
+            <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="fscebook logo"></a>
+            <a href="https://x.com/?lang=en"><img src="images/icons/twitter.png" alt="X-twitter logo"></a>
+            <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="instagram logo"></a>           
+          </div>
+        </div>
+        <div class="footer-column">
+          <h2 class="footer-section-title dark-1">Let’s Message me</h2>
+          <form class="footer-form" action="">
+            <input type="text" name="" id="" placeholder="Your name">
+            <input type="text" name="" id="" placeholder="Your email">
+            <textarea class="dark-3 " name="" id="" cols="30" rows="10">Message here</textarea>
+          </form>
+          <input class="btn-primary" type="submit" value="Submit">
+        </div>
+      </footer>
   </body>
 </html>
