--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>my first web development portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles/portfolio.css"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
-  <body class="open-sans-normal">  
+  <body class="open-sans-normal">
     <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -32,9 +35,15 @@
             he. Morning because as to society behaved moments.
           </p>
           <button class="btn-primary">Download CV</button>
-          <button class="btn-primary banner-button">Contact</button>
-        </div>
-        <img class="banner-profile-pic" src="images/hardy.png" alt="A man photo" width="584" height="676">
+          <button class="banner-button secondary-bg">Contact</button>
+          </div>
+        <img
+          class="banner-profile-pic"
+          src="images/hardy.png"
+          alt="A man photo"
+          width="584"
+          height="676"
+        />
       </div>
     </header>
 
@@ -62,7 +71,7 @@
           </div>
           <div class="About-item">
             <p class="item-title">Date of birth:</p>
-            <p class="item-description ">11 November 1996</p>
+            <p class="item-description">11 November 1996</p>
           </div>
           <div class="About-item">
             <p class="item-title">From:</p>
@@ -74,32 +83,60 @@
 
       <section class="skill">
         <h2 class="skill-title dark-1 text-center">What I do</h2>
-        <div class="skill-description dark-3 text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
-        </div>               
+        <div class="skill-description dark-3 text-center">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </div>
 
         <div class="skills-container">
           <!-- .skill*4>img+h3.skill-title+p.skill-description -->
 
           <div class="skills">
-            <img src="images/icons/js.png" alt="">
+            <a href="https://www.w3schools.com/js/">
+              <img src="images/icons/js.png" alt="" />
+            </a>
             <h3 class="skills-title">Vanilla JavaScript</h3>
-            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skills-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skills">
-            <img src="images/icons/react.png" alt="">
+            <a href="https://legacy.reactjs.org/">
+              <img src="images/icons/react.png" alt="react logo">
+            </a>
             <h3 class="skills-title">React</h3>
-            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skills-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skills">
-            <img src="images/icons/nodejs.png" alt="">
+            <a href="https://nodejs.org/en/about">
+              <img src="images/icons/nodejs.png" alt="" />
+            </a>
             <h3 class="skills-title">Node.js</h3>
-            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skills-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skills">
-            <img src="images/icons/mongo.png" alt="">
+            <a href="https://www.mongodb.com/company/what-is-mongodb">
+              <img src="images/icons/mongo.png" alt="" />
+            </a>
             <h3 class="skills-title">MongoDB</h3>
-            <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-          </div>        
+            <p class="skills-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
         </div>
       </section>
       <!-- Third section from here -->
@@ -113,25 +150,40 @@
             <h3 class="resume-column-title">My Education</h3>
             <div class="experience">
               <h4 class="experience-title">Master in Computer Engineering</h4>
-              <h5 class="experience-subtitle ">Harvard University / 2015 - 2017</h5>
-              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <h5 class="experience-subtitle">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-descriptions">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
-            <hr>
+            <hr />
 
             <div class="experience">
               <h4 class="experience-title">Master in Computer Engineering</h4>
-              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
-              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <h5 class="experience-subtitle">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-descriptions">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
-            <hr>
+            <hr />
 
             <div class="experience">
               <h4 class="experience-title">Master in Computer Engineering</h4>
-              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
-              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <h5 class="experience-subtitle">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-descriptions">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
           </div>
           <div class="resume-column">
@@ -139,52 +191,72 @@
             <div class="experience">
               <h4 class="experience-title">Sr. Font End Developer</h4>
               <h5 class="experience-subtitle">Apple Inc / 2020 - Current</h5>
-              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <div class="experience-descriptions">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
-            <hr>
+            <hr />
 
             <div class="experience">
               <h4 class="experience-title">Jr. Font End Developer</h4>
               <h5 class="experience-subtitle">Dribbble Inc / 2018 - 2022</h5>
-              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <div class="experience-descriptions">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
-            <hr>
-            
-           <div class="experience">
+            <hr />
+
+            <div class="experience">
               <h4 class="experience-title">HTML Developer</h4>
               <h5 class="experience-subtitle">Adobe Inc / 2017 - 2018</h5>
-              <div class="experience-descriptions">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
-            </div>           
+              <div class="experience-descriptions">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
           </div>
         </div>
         <div class="resume-download-btn">
           <button class="btn-primary">Download CV</button>
-        </div>             
+        </div>
       </section>
-      </main>
+    </main>
 
-      <footer class="secondary-bg">
-        <div class="footer-column">
-          <h2 class="footer-section-title dark-1">Lets Connect</h2>
-          <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-          <div>
-            <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="fscebook logo"></a>
-            <a href="https://x.com/?lang=en"><img src="images/icons/twitter.png" alt="X-twitter logo"></a>
-            <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="instagram logo"></a>           
-          </div>
+    <footer class="secondary-bg">
+      <div class="footer-column">
+        <h2 class="footer-section-title dark-1">Lets Connect</h2>
+        <p>
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div>
+          <a href="https://www.facebook.com/"
+            ><img src="images/icons/facebook.png" alt="fscebook logo"
+          /></a>
+          <a href="https://x.com/?lang=en"
+            ><img src="images/icons/twitter.png" alt="X-twitter logo"
+          /></a>
+          <a href="https://www.instagram.com/"
+            ><img src="images/icons/insta.png" alt="instagram logo"
+          /></a>
         </div>
-        <div class="footer-column">
-          <h2 class="footer-section-title dark-1">Let’s Message me</h2>
-          <form class="footer-form" action="">
-            <input type="text" name="" id="" placeholder="Your name">
-            <input type="text" name="" id="" placeholder="Your email">
-            <textarea class="dark-3 " name="" id="" cols="30" rows="10">Message here</textarea>
-          </form>
-          <input class="btn-primary" type="submit" value="Submit">
-        </div>
-      </footer>
+      </div>
+      <div class="footer-column">
+        <h2 class="footer-section-title dark-1">Let’s Message me</h2>
+        <form class="footer-form" action="">
+          <input type="text" name="" id="" placeholder="Your name" />
+          <input type="text" name="" id="" placeholder="Your email" />
+          <textarea class="dark-3" name="" id="" cols="30" rows="10">
+Message here</textarea
+          >
+        </form>
+        <input class="btn-primary" type="submit" value="Submit" />
+      </div>
+    </footer>
   </body>
 </html>
