added links on nav lists

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
-          <li><a class="dark-2" href="">Portfolio</a></li>
-
-          <li><a class="dark-2" href="">Blog</a></li>
+          <li><a class="nav-port-blog" href="https://mattfarley.ca/">Portfolio</a></li>
+          <li><a class="nav-port-blog" href="https://freefrontend.com/tailwind-code-examples/">Blog</a></li>
 
           <li>
             <a href=""><button class="btn-primary">Hire Me</button></a>
