added button styles and hover

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>my first web development portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/portfolio.css" />
-    <script src="https://kit.fontawesome.com/9fc1781a76.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="styles/portfolio.css"/>
+    <script
+      src="https://kit.fontawesome.com/9fc1781a76.js"
+      crossorigin="anonymous">
+    </script>
   </head>
   <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -22,14 +22,11 @@
             <a class="nav-port-blog" href="https://mattfarley.ca/">Portfolio</a>
           </li>
           <li>
-            <a
-              class="nav-port-blog"
-              href="https://freefrontend.com/tailwind-code-examples/"
-              >Blog</a
-            >
+           <a class="nav-port-blog" href="https://freefrontend.com/tailwind-code-examples/">
+           Blog</a>
           </li>
           <li>
-            <a href=""><button class="btn-primary">Hire Me</button></a>
+            <a href="https://www.prospects.ac.uk/job-profiles/web-developer#responsibilities"><button class="btn-primary">Hire Me</button></a>
           </li>
         </ul>
       </nav>
@@ -42,8 +39,12 @@
             he. Morning because as to society behaved moments.
           </p>
           <div class="header-btn">
-            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV </button>
-          <button class="banner-button secondary-bg"><i class="fa-solid fa-phone"></i> Contact</button>
+            <button class="btn-primary">
+              <i class="fa-solid fa-download"></i> Download CV
+            </button>
+            <button class="banner-button secondary-bg">
+              <i class="fa-solid fa-phone"></i> Contact
+            </button>
           </div>
         </div>
         <img
@@ -51,8 +52,7 @@
           src="images/hardy.png"
           alt="A man photo"
           width="584"
-          height="676"
-        />
+          height="676"/>
       </div>
     </header>
     <main>
@@ -103,7 +103,7 @@
 
           <div class="skills">
             <a href="https://www.w3schools.com/js/">
-              <img src="images/icons/js.png" alt="" />
+              <img src="images/icons/js.png" alt="javascript logo">
             </a>
             <h3 class="skills-title">Vanilla JavaScript</h3>
             <p class="skills-description">
@@ -114,7 +114,7 @@
           </div>
           <div class="skills">
             <a href="https://legacy.reactjs.org/">
-              <img src="images/icons/react.png" alt="react logo" />
+              <img src="images/icons/react.png" alt="react logo">
             </a>
             <h3 class="skills-title">React</h3>
             <p class="skills-description">
@@ -125,7 +125,7 @@
           </div>
           <div class="skills">
             <a href="https://nodejs.org/en/about">
-              <img src="images/icons/nodejs.png" alt="" />
+              <img src="images/icons/nodejs.png" alt="node js. logo">
             </a>
             <h3 class="skills-title">Node.js</h3>
             <p class="skills-description">
@@ -136,7 +136,7 @@
           </div>
           <div class="skills">
             <a href="https://www.mongodb.com/company/what-is-mongodb">
-              <img src="images/icons/mongo.png" alt="" />
+              <img src="images/icons/mongo.png" alt="mongo DB logo">
             </a>
             <h3 class="skills-title">MongoDB</h3>
             <p class="skills-description">
@@ -167,7 +167,7 @@
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr />
+            <hr>
 
             <div class="experience">
               <h4 class="experience-title">Master in Computer Engineering</h4>
@@ -180,7 +180,7 @@
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr />
+            <hr>
 
             <div class="experience">
               <h4 class="experience-title">Master in Computer Engineering</h4>
@@ -205,7 +205,7 @@
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr />
+            <hr>
 
             <div class="experience">
               <h4 class="experience-title">Jr. Font End Developer</h4>
@@ -216,7 +216,7 @@
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr />
+            <hr>
 
             <div class="experience">
               <h4 class="experience-title">HTML Developer</h4>
@@ -230,7 +230,9 @@
           </div>
         </div>
         <div class="resume-download-btn">
-          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary download-cv">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
     </main>
@@ -243,27 +245,19 @@
           between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div>
-          <a href="https://www.facebook.com/"
-            ><img src="images/icons/facebook.png" alt="fscebook logo"
-          /></a>
-          <a href="https://x.com/?lang=en"
-            ><img src="images/icons/twitter.png" alt="X-twitter logo"
-          /></a>
-          <a href="https://www.instagram.com/"
-            ><img src="images/icons/insta.png" alt="instagram logo"
-          /></a>
+          <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="fscebook logo"></a>
+          <a href="https://x.com/?lang=en"><img src="images/icons/twitter.png" alt="X-twitter logo"></a>
+          <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="instagram logo"></a>
         </div>
       </div>
       <div class="footer-column">
         <h2 class="footer-section-title dark-1">Let’s Message me</h2>
         <form class="footer-form" action="">
-          <input type="text" name="" id="" placeholder="Your name" />
-          <input type="text" name="" id="" placeholder="Your email" />
-          <textarea class="dark-3" name="" id="" cols="30" rows="10">
-Message here</textarea
-          >
+          <input type="text" name="" id="" placeholder="Your name">
+          <input type="text" name="" id="" placeholder="Your email">
+          <textarea class="dark-3" name="" id="" cols="30" rows="10">Message here</textarea>
         </form>
-        <input class="btn-primary" type="submit" value="Submit" />
+        <input class="btn-primary" type="submit" value="Submit"/>
       </div>
     </footer>
   </body>
