added button styles and hover

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </div>
         </div>
         <div class="resume-download-btn">
-          <button class="btn-primary download-cv">
+          <button class="btn-primary text-center">
             <i class="fa-solid fa-download"></i> Download CV
           </button>
         </div>
