--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
             <button class="btn-primary">
               <i class="fa-solid fa-download"></i> Download CV
             </button>
-            <button class="banner-button secondary-bg">
-              <i class="fa-solid fa-phone"></i> Contact
+
+                <button class="banner-button secondary-bg"> 
+                  <a href="https://www.linkedin.com/company/prospects-ac-uk/">
+                  <i class="fa-solid fa-phone"></i> Contact </a>             
             </button>
           </div>
         </div>
@@ -230,7 +232,7 @@
           </div>
         </div>
         <div class="resume-download-btn">
-          <button class="btn-primary text-center">
+          <button class="btn-primary">
             <i class="fa-solid fa-download"></i> Download CV
           </button>
         </div>
@@ -257,7 +259,7 @@
           <input type="text" name="" id="" placeholder="Your email">
           <textarea class="dark-3" name="" id="" cols="30" rows="10">Message here</textarea>
         </form>
-        <input class="btn-primary" type="submit" value="Submit"/>
+        <input class="btn-primary" type="submit" value="Submit">
       </div>
     </footer>
   </body>
