added media query on skills container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body class="open-sans-normal">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -61,7 +61,7 @@
     <main>
       <!-- first section -->
 
-      <section class="About secondary-bg">
+      <section class="About secondary-bg hide">
         <h3 class="section-title">About Me</h3>
         <p class="section-description dark-3">
           I, m a designer & developer with a passion for web design. I enjoy
@@ -100,7 +100,7 @@
           sets and technologies i use. Want to find out more about my
           experience? Check out my online resume and project portfolio.
         </div>
-
+        
         <div class="skills-container">
           <!-- .skill*4>img+h3.skill-title+p.skill-description -->
 
@@ -152,9 +152,10 @@
       </section>
       <!-- Third section from here -->
 
-      <section class="resume">
+      <section class="resume hide">
         <h2 class="resume-section-title dark-1">A summary of My Resume</h2>
         <div class="resume-container">
+
           <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-subtitle+.experience-descriptions -->
 
           <div class="resume-column">
@@ -240,7 +241,7 @@
       </section>
     </main>
 
-    <footer class="secondary-bg">
+    <footer class="secondary-bg hide">
       <div class="footer-column">
         <h2 class="footer-section-title dark-1">Lets Connect</h2>
         <p>
@@ -248,7 +249,7 @@
           between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div>
-          <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="fscebook logo"></a>
+          <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook logo"></a>
           <a href="https://x.com/?lang=en"><img src="images/icons/twitter.png" alt="X-twitter logo"></a>
           <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="instagram logo"></a>
         </div>
