added media query and on resume container

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </section>
       <!-- Third section from here -->
 
-      <section class="resume hide">
+      <section class="resume">
         <h2 class="resume-section-title dark-1">A summary of My Resume</h2>
         <div class="resume-container">
 
