--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <main>
       <!-- first section -->
 
-      <section class="About secondary-bg hide">
+      <section class="About secondary-bg">
         <h3 class="section-title">About Me</h3>
         <p class="section-description dark-3">
-          I, m a designer & developer with a passion for web design. I enjoy
+          I, m a designer & developer with a passion for web-development.I enjoy
           developing simple, clean and slick websites that provide real value to
           the end user. Thousands of clients have procured exceptional results
           while working with me. Delivering work within time and budget which
