--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </section>
     </main>
 
-    <footer class="secondary-bg hide">
+    <footer class="secondary-bg">
       <div class="footer-column">
         <h2 class="footer-section-title dark-1">Lets Connect</h2>
         <p>
