added responsive media query and styles on header section for small device

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body class="open-sans-normal">
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -257,9 +257,9 @@
       <div class="footer-column">
         <h2 class="footer-section-title dark-1">Let’s Message me</h2>
         <form class="footer-form" action="">
-          <input type="text" name="" id="" placeholder="Your name">
-          <input type="text" name="" id="" placeholder="Your email">
-          <textarea class="dark-3" name="" id="" cols="30" rows="10">Message here</textarea>
+          <input type="text" name="" id="" placeholder="Your name" >
+          <input type="text" name="" id="" placeholder="Your email" >
+          <textarea class="dark-3" name="" id="" cols="30" rows="10" >Message here</textarea>
         </form>
         <input class="btn-primary" type="submit" value="Submit">
       </div>
